tests/snapshots/account_api_test__error_when_account_already_exists.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Error account already exists for email: someone@example.com\"}}}"

