tests/snapshots/account_api_test__error_when_bearer_token_claim_is_invalid_email_on_update_account.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Token account does not match\"}}}"

