tests/snapshots/account_api_test__error_when_invalid_format_bearer_token_on_update_account.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Error decoding token\"}}}"

