tests/snapshots/account_api_test__error_when_no_bearer_token_on_update_account.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"`Authorization` header is missing"

