tests/snapshots/account_api_test__error_when_verification_code_expired.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Verification code expired for email someone@example.com and code 123456\"}}}"

