tests/snapshots/account_api_test__error_when_verification_not_found_for_account.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Error\",\"payload\":{\"Error\":{\"error_message\":\"Verification not found with email someone@example.com and code 123456\"}}}"

