tests/snapshots/account_api_test__find_all_by_eoa_address.snap
---
source: tests/account_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    accounts:
      - id: "[uuid]"
        email: first@example.com
        wallet_address: ""
        eoa_address: "123"
        updated_at: "[timestamp]"

