tests/snapshots/account_api_test__find_all_by_wallet_address.snap
---
source: tests/account_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    accounts:
      - id: "[uuid]"
        email: first@example.com
        wallet_address: "123"
        eoa_address: ""
        updated_at: "[timestamp]"

