tests/snapshots/account_api_test__retrieve_all_accounts.snap
---
source: tests/account_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    accounts:
      - id: "[uuid]"
        email: first@example.com
        wallet_address: ""
        eoa_address: ""
        updated_at: "[timestamp]"

