tests/snapshots/account_api_test__successfully_create_account_with_jwt.snap
---
source: tests/account_api_test.rs
expression: json_response
---
status: Success
payload:
  Success:
    jwt: "[jwt]"

