tests/snapshots/account_api_test__successfully_update_account.snap
---
source: tests/account_api_test.rs
expression: res.text().await
---
"{\"status\":\"Success\",\"payload\":{\"Success\":{\"updated\":true}}}"

